Progress wheel no longer shifts content down when visible.

--- a/synopticgwt/war/SynopticGWT.css
+++ b/synopticgwt/war/SynopticGWT.css
@@ -35,6 +35,11 @@ body {
     position:relative;
 }
 
+#progressWheelDiv {
+	position: absolute;
+	top: 47px;
+}
+
 .sendButton {
     display: block;
     font-size: 16pt;
